@@ -8,8 +8,9 @@
 Version 0.5
 Date: xx/xx/2008
 
-+Fix highlighting error in config dialog
 +Add support for (HTML, Inno Setup Scripts, newLisp)
++Fix highlighting error in config dialog
++Fix not updating availability after a save as or lexer change
 
 #-----------------------------------------------------------------------------#
 
